# webinar-vibe-coding-backend

./: main.py  pyproject.toml
.ai/docs/: api_analysis.md  data_flow_analysis.md  dependency_analysis.md  request_flow_analysis.md  structure_analysis.md
backend/: .env  .env.example  README.md  docker-compose.yml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: conversation.py  health.py  odoo_webhook.py
backend/app/core/: config.py  database.py  logger.py  mq.py  redis.py
backend/app/models/: conversation.py  lead.py  message.py
backend/app/services/: ai_pipeline.py  conversation_service.py  llm_agent.py  mcp_client.py  odoo_client.py  schemas.py
backend/app/workers/: ai_worker.py  queues.py
