[project]
name = "webinar-vibe-coding-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "aioredis>=2.0.1",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "disutils>=1.4.32.post2",
    "fastapi[standard]>=0.124.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.45",
]
